style.css
.jumbotron-header {
    height: 75vh;
    /*background: url('img/vr-main-header-new.jpg') no-repeat;*/
    background-color: #000;
    background-size: cover; 
    background-attachment: fixed; /* Mini parallax :) */
}

section {
    padding: 0px 0 50px 0;
  }

section#home {
    padding: 0;
    text-align: center;
    color: #FFF;
}

section#home .home-section {
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
}

.navbar.fixed-top {
    background-color: transparent!important;
}

.navbar.fixed-top.scrolled {
    background-color: #343a40 !important;
    transition: background-color 200ms linear;
    color: #FFF!important;
}

.navbar.fixed-top.scrolled li > a {
    color: #FFF;
}

.navbar.fixed-top.scrolled li > a.active {
    color: rgb(126, 14, 33);
}


section#current {
    padding-top: 50px;
}

section#about {
    padding: 0;
    margin-bottom: 0;
}

.about-heading {
    margin-bottom: 20px;
}

.paddingBottomSmall {
    padding-bottom: 20px;
}

.current-conference {
    background: rgb(126, 14, 33);
    -webkit-box-shadow: inset 0px -3px 7px -4px rgba(0,0,0,0.5);
    -moz-box-shadow: inset 0px -3px 7px -4px rgba(0,0,0,0.5);
    box-shadow: inset 0px -3px 7px -4px rgba(0,0,0,0.5);
}

.current-heading {
    text-align: center;
    text-decoration: underline;
    margin-bottom: 50px;
    color: #fff;
}

.card-current {
    text-align: center;
    padding: 20px;
}

.btn-current {
    margin-top: 20px;
}

.past-heading {
    text-align: center;
    text-decoration: underline;
    margin-bottom: 20px;
    padding-top: 55px
}

.contact-heading {
    color: #d11313;
    text-align: center;    
    margin-bottom: 20px;
    text-transform: uppercase;
    padding-top: 55px;
}


.title {
    font-weight: bold;
}
span.authors {
    display: block;
}

section#past .container .row .col-sm-6 {
    margin-top: 30px;
}

section#past {
    -webkit-box-shadow: inset 0px -3px 7px -4px rgba(0,0,0,0.5);
    -moz-box-shadow: inset 0px -3px 7px -4px rgba(0,0,0,0.5);
    box-shadow: inset 0px -3px 7px -4px rgba(0,0,0,0.5);
}

.card {
    width: 100%;
    padding: 10px 0px;
}

#past .card-text a {
    color: #d11313;
}


footer.footer {
    background: #000;
    padding: 5px;
    color: #a1a1a1;
    font-size: 14px;
}

/* Global text alignment utility */
.center-text {
    text-align:center;
}

.members li {
    list-style-type: none;
    margin-bottom: 20px;
}

.white-bg-sm {
    background: #fff;
    padding: 5px;
}


.emailIcon{
    font-size: 0.9em;
    font-weight: bold;
}

.emailText{
    font-size: 0.9em;
    font-weight: bold;
}

.floatLeft{
    float: left;
}

.floatRight{
    float: right;
}

.alignCenter{
    text-align: center;
}

h1,h2,h3,h4,h5,h6 {
    line-height: 1.2;
    font-weight: bold;
}

h2 {
    text-transform: uppercase;
    text-align: center;
}
section{
    margin-bottom: 50px;
}

